tests/suite/snapshots/suite__check__tests__check__bad_inherit_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_inherit_1.xi:8:10]
   │
 8 │   return a.baz()
   ·          ──┬──  
   ·            ╰──── Unbound function baz
───╯

