tests/suite/snapshots/suite__check__tests__check__bad_interface_implementation_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_interface_implementation_2.xi:2:5]
   │
 2 │     foo(a: int) {}
   ·     ─┬─  
   ·      ╰─── Implementation does not match signature
   │
   ├─[tests/check/bad_interface_implementation_2.ixi:1:7]
   │
 1 │ class A {}
   ·       ┬  
   ·       ╰── Signature definition here
───╯

