tests/suite/snapshots/suite__check__tests__check__bad_mixed_array.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_mixed_array.xi:2:30]
   │
 2 │     i:int[][] = {{}, {true}, {1}}
   ·                      ───┬──  ─┬─  
   ·                         ╰───────── Expected bool[] because of this
   ·                               │   
   ·                               ╰─── Expected bool[] but found int[]
───╯

